change the file name about to hebrew

--- a/defamation-law.html
+++ b/defamation-law.html
@@ -74,7 +74,7 @@
                         <ul class="nav_scroll">
                             <li><a href="index.html">עמוד הבית</a>
                             </li>
-                            <li><a href="about.html">אודות</a></li>
+                            <li><a href="אודות.html">אודות</a></li>
                             <li><a href="#">תחומי התמחות</a>
                                 <ul class="sub-menu">
                                     <li><a href="enforcement.html">הוצאה לפועל</a></li>
@@ -100,7 +100,7 @@
                 <ul class="nav_scroll">
                     <li><a href="index.html"">עמוד הבית</a>					
 								</li>
-								<li><a href=" about.html">אודות</a></li>
+								<li><a href=" אודות.html">אודות</a></li>
                     <li><a href="#">תחומי התמחות</a>
                         <ul class="sub-menu">
                             <li><a href="enforcement.html">הוצאה לפועל</a></li>
@@ -185,7 +185,6 @@
     <!-- End lawyer about Secton -->
     <!--==================================================-->
 
-
     <!--==================================================-->
     <!-- Start lawyer Footer Section -->
     <!--==================================================-->
@@ -201,19 +200,21 @@
                                 <h3 style="color:#eecd95;"> עו"ד מעין דקל </h3>
                                 <h4 style="color:#eecd95;">MAYAN DEKEL LAW OFFICE</h4>
                             </a>
-                        </div>
-                        <!-- company desc info -->
+                        </div> <!-- company desc info -->
                         <div class="company-desc-info">
-                            <p> <i class="bi bi-telephone"></i>050-7526885 </p>
-                            <p> <i class="bi bi-envelope-fill"></i>dekellaw2024@gmail.com </p>
+                            <p> <i class="bi bi-telephone"></i><a href="tel:0507526885"
+                                    style="color:inherit;">050-7526885</a> </p>
+                            <p> <i class="bi bi-envelope-fill"></i><a href="mailto:dekellaw2024@gmail.com"
+                                    style="color:inherit;">dekellaw2024@gmail.com</a> </p>
                             <p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה</p>
                         </div>
                         <!-- company social info -->
                         <div class="company-social-info">
                             <ul>
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                <!-- <li><a href="#"><i class="fab fa-facebook-f"></i></a></li> -->
                                 <!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
-                                <li><a target="_blank" href="https://www.linkedin.com/in/mayan-dekel-938297344/"><i
+                                <li><a target="_blank"
+                                        href="https://www.linkedin.com/in/mayan-dekel-938297344?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
                                             class="fab fa-linkedin-in"></i></a></li>
                                 <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
                             </ul>
@@ -251,14 +252,16 @@
                         <!-- widget title -->
                         <h4 class="widget-title"> צור קשר </h4>
                         <div class="menu-quick-link-contact">
-                            <!-- contact icon -->
-                            <div class="footer-contact-icon">
-                                <i class="bi bi-telephone-x"></i>
-                            </div>
-                            <!-- contact title -->
-                            <div class="footer-contact-title">
-                                <h6>050-7526885</h6>
-                            </div>
+                            <a href="tel:0507526885" style="color:inherit;">
+                                <!-- contact icon -->
+                                <div class="footer-contact-icon">
+                                    <i class="bi bi-telephone"></i>
+                                </div>
+                                <!-- contact title -->
+                                <div class="footer-contact-title">
+                                    <h6>050-7526885</h6>
+                                </div>
+                            </a>
                         </div>
                         <!-- footer desc -->
                         <div class="footer-contact-desc">
