--- a/אודות.html
+++ b/אודות.html
@@ -1,12 +1,18 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html lang="he" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>עורכת דין מעין דקל - הוצאה לפועל, נדלן וירושות</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Favicon -->
+    <title>אודות עורכת דין מעין דקל | מומחית בהוצאה לפועל עם ניסיון של 20 שנה</title>
+    <meta name="description"
+        content="היכרות עם עורכת דין מעין דקל - עורכת דין מנוסה עם יותר מ-20 שנות ניסיון בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין.">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
+    <meta name="keywords"
+        content="עורכת דין, מעין דקל, הוצאה לפועל, נדל״ן, חוזים, לשון הרע, נזיקין, ייעוץ משפטי, משרד עורכי דין">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.mayandekel-law.co.il/אודות.html" />
+    <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="assets/images/LawyerMaayanLogo.svg">
     <!-- bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all" />
@@ -15,7 +21,8 @@
     <!-- animate CSS -->
     <link rel="stylesheet" href="assets/css/animate.css" type="text/css" media="all" />
     <!-- animated-text CSS -->
-    <link rel="stylesheet" href="assets/css/animated-text.css" type="text/css" media="all" /> <!-- font-awesome CSS -->
+    <link rel="stylesheet" href="assets/css/animated-text.css" type="text/css" media="all" />
+    <!-- font-awesome CSS -->
     <link rel="stylesheet" href="assets/css/all.min.css" type="text/css" media="all" />
     <!-- font-awesome fix CSS -->
     <link rel="stylesheet" href="assets/css/font-awesome-fix.css" type="text/css" media="all" />
@@ -24,7 +31,8 @@
     <!-- theme-default CSS -->
     <link rel="stylesheet" href="assets/css/theme-default.css" type="text/css" media="all" />
     <!-- meanmenu CSS -->
-    <link rel="stylesheet" href="assets/css/meanmenu.min.css" type="text/css" media="all" /> <!-- Fonts CSS -->
+    <link rel="stylesheet" href="assets/css/meanmenu.min.css" type="text/css" media="all" />
+    <!-- Fonts CSS -->
     <link rel="stylesheet" href="assets/css/fonts.css" type="text/css" media="all" />
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
@@ -42,6 +50,67 @@
     <link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all" />
     <!-- Custom styles -->
     <link rel="stylesheet" href="assets/css/custom.css" type="text/css" media="all" />
+    <!-- Schema.org markup for Google -->
+    <script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "LegalService",
+		"name": "משרד עורכת דין מעין דקל",
+		"image": "assets/images/LawyerMaayanLogo.svg",
+		"url": "https://www.mayandekel-law.co.il/אודות.html",
+		"telephone": "050-7526885",
+		"address": {
+			"@type": "PostalAddress",
+			"streetAddress": "השחם 1",
+			"addressLocality": "פתח תקווה",
+			"postalCode": "4951729",
+			"addressCountry": "IL"
+		},
+		"description": "משרד עורכת דין מעין דקל מתמחה בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין. ניסיון של למעלה מ-20 שנה במגוון תחומי המשפט.",
+		"areaServed": "ישראל",
+		"hasOfferCatalog": {
+			"@type": "OfferCatalog",
+			"name": "שירותים משפטיים",
+			"itemListElement": [
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "הוצאה לפועל"
+					}
+				},
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "נדל\"ן"
+					}
+				},
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "חוזים"
+					}
+				},
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "לשון הרע"
+					}
+				},
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "נזיקין"
+					}
+				}
+			]
+		}
+	}
+	</script>
 </head>
 
 <body>
@@ -132,7 +201,7 @@
                     <div class="breatcam-content text-center">
                         <!-- breadcumb title -->
                         <div class="breatcam-title">
-                            <h1> חוזים </h1>
+                            <h1> אודות </h1>
                         </div>
                         <!-- breatcam menu -->
                         <!-- <div class="breatcam-menu">
@@ -154,9 +223,9 @@
     <!--==================================================-->
     <!-- Start lawyer about Section -->
     <!--==================================================-->
-    <div class="about-section style-four" style="direction: ltr;">
+    <section class="about-section style-four" style="direction: rtl; text-align: right;">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row row-reverse align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <!-- about thumb -->
                     <div class="about-thumb3 ">
@@ -165,42 +234,95 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="lawyer-section-title business-profile">
-                        <h1 class="about-border2">חוזים והסכמים</h1>
-                        <p class="about-pt">המסגרת המשפטית שהיא תחום של הסכמים וחוזים בין צדדים לקראת התחייבות שלהם
-                            בחוזה. משרדנו מטפל בחוזים משפטיים, חוזי עבודה,
-                            חוזי שכירות , חוזי מכר וכו'..
+                        <h1 class="about-border2">אודות עורכת דין</h1>
+                        <h1> מעין דקל</h1>
+                        <p class="about-pt">
+                            <strong>מעין דקל, עורכת דין מנוסה, בעלת ניסיון עשיר של למעלה מ-20 שנה</strong>
+                            בתחום המשפט האזרחי, עם התמחות ייחודית ועמוקה בתחום ההוצאה לפועל. במהלך הקריירה שלה עבדה עם
+                            משרדי עורכי הדין המובילים
+                            בישראל, והעניקה שירותים משפטיים לעיריות, חברות ביטוח, בנקים, מוסדות אקדמיים ורשות מקרקעי
+                            ישראל.
                         </p>
+
                         <p>
-                            בנוסף קיימת נישה נוספת של הסכם בעל פה שגם הוא מחייב את כל הצדדים לעמוד בו. מדובר על מסגרת של
-                            מתו פעולות בן הצדדיים או
-                            הספקת שירותים או מוצר. משרדנו דואג שכל צד יעמוד בהתחייבות שלו ובכל התנאים שנקבעו בחוזה.
-
+                            עו"ד דקל נחשבת לבעלת מומחיות יוצאת דופן בהוצאה לפועל ובגביית חובות, עם היכרות יסודית עם
+                            לשכות ההוצל"פ השונות בארץ.
+                            הידע שצברה מאפשר לה לבנות פתרונות משפטיים מדויקים ואפקטיביים, לטפל בתיקים מורכבים ולהשיג
+                            תוצאות מיטביות עבור
+                            לקוחותיה – הן בזירה הפרטית והן מול גופים מוסדיים.
                         </p>
+
                         <p>
-                            משרדנו מטפל באופן אישי ומקצועי בחוזים של מקרקעין, חוזים אישיים, וחוזי נזיקין. וכן שומר על כך
-                            שהצדדים לא יפרו את החוזה,
-                            ובמקרה כן נוצרה הפרה פועל לסעדים משפטיים כולל אכיפת החוזים ופיצוי כספי לנפגע.
-
+                            מעבר למקצועיות המשפטית, עו"ד דקל שמה דגש מיוחד על יחס אישי, ליווי צמוד ושקיפות מלאה לאורך כל
+                            שלבי הטיפול בתיק. כל
+                            לקוח זוכה להקשבה, להסבר ברור ולתחושת ביטחון, גם במצבים משפטיים מאתגרים ומורכבים.
                         </p>
+
                         <p>
-                            ישנה חשיבות לייעוץ משפטי לפני חתימה על כל חוזה, ולכן הניסיון הרב בתחום החוזים מבטיח שמשרדנו
-                            שומר על הלקוח יהיה מוגן
-                            וישמור על הזכויות שלו. כמו כן למנוע פרצות בחוק או בחוזה שעלולים להוביל לסכסוך משפטי . ובכך
-                            מסייע להגיע לפתרון של המחלוקת
-                            ברגע שקיימת הפרה. בנושאים אלה יש דגש לשיקול דעת וזהירות מתבקשת, ולכן משרדנו פועל בשיתוף
-                            פעולה מלא עם כל הצדדים על מנת
-                            שכל המעורבים יפעלו בשיתוף פעולה מה שיוביל לחוזה מוצלח.
-
-
-                        </p>
+                            בזכות שילוב בין ניסיון, רגישות אנושית וחשיבה משפטית יצירתית – מצליחה מעין דקל להוביל את
+                            לקוחותיה לפתרונות מהירים
+                            ויעילים, תוך שמירה על כבודם, זמנם וצרכיהם האישיים. </p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!--==================================================-->
     <!-- End lawyer about Secton -->
     <!--==================================================-->
+
+    <section class="about-section style-two" style="direction: rtl; text-align: right;">
+        <div class="container">
+            <div class="d-flex row-reverse about-bg ">
+                <div class="col-lg-6 col-md-12 hide-below-1000">
+                    <!-- about thumb -->
+                    <div class="about-thumb">
+                        <img src="assets/images/resource/about3.jpg" alt="">
+                        <!-- about counter -->
+                        <div class="about-counter">
+                            <div class="about-counter-title">
+                                <h3 class="counter">20</h3>
+                                <h6>Year's Exprience</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="about-extra-single-box">
+                        <div class="lawyer-section-title white">
+                            <h1>פרופיל עסקי </h1>
+                            <p>
+                                עורכת הדין מעין דקל נחשבת לדמות בולטת ומוערכת בעולם ההוצאה לפועל, בעלת מוניטין של
+                                למעלה מ-20 שנות ניסיון בטיפול
+                                בתיקי חייבים וזוכים.
+                                לאורך השנים צברה ניסיון מעשי עשיר, הכולל טיפול בתיקי גבייה מורכבים, ביצוע הסבות
+                                משפטיות של תיקים פעילים, ומימושים
+                                מיוחדים – הכול תוך הקפדה על ליווי אישי, מקצועי ושקוף ללקוחותיה.
+                            </p>
+
+                            <p>
+                                עבודתה של עו"ד דקל מתבצעת בקפדנות ובהתאם להוראות החוק, התקנות ועדכוני הפסיקה – כל
+                                זאת על רקע רגולציה משפטית דינאמית
+                                ומשתנה.
+                                ניסיונה הרב מאפשר לה להעניק שירות משפטי מדויק ואפקטיבי, לצד הבנה עמוקה של המערכת
+                                המשפטית והפרוצדורלית בתחום ההוצאה
+                                לפועל.
+                            </p>
+
+                            <p>
+                                בנוסף, לעו"ד דקל ניסיון עשיר בניהול תיקים בתחום ייצוג דיירים ונדל"ן – תחום בו היא
+                                פועלת מזה עשור.
+                                היא מעניקה טיפול כוללני בכל שלבי העסקה, לרבות ניהול תיקי ירושה, צווי ירושה וצוואות,
+                                רכישה, מכירה והשכרה של נכסי
+                                נדל"ן – הן פרטיים והן מסחריים.
+                                כל תיק מלווה בליווי אישי וצמוד, מתוך הבנה מעמיקה של צורכי הלקוח וחתירה לפתרון מיטבי.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
 
     <!--==================================================-->
     <!-- Start lawyer Footer Section -->
@@ -333,9 +455,6 @@
     <!--==================================================-->
     <!-- Start scrollup section Area -->
     <!--==================================================-->
-
-
-
 
     <!-- jquery js -->
     <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
