fixing layout content pages

--- a/enforcement.html
+++ b/enforcement.html
@@ -163,7 +163,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="lawyer-section-title business-profile">
-                        <h1 class="about-border2">הוצאה לפועל</h1>
+                        <h1 class="about-border2" style="line-height: 1; margin-top: 0px;">הוצאה לפועל</h1>
                         <p class="about-pt">
                             לשכת הוצאה לפועל נועדה לתת מענה לנושים שלא קיבלו את כספם ולאכוף את זכויותיהם מכל מי שמסרב
                             לשלם. בלשכה ניתן לפנות כל אזרח, חברה בע"מ, עמותה, וגוף עסקי. פתיחת התיק יכולה להיות בשל פסק
@@ -214,12 +214,9 @@
                         <!-- company social info -->
                         <div class="company-social-info">
                             <ul>
-                                <!-- <li><a href="#"><i class="fab fa-facebook-f"></i></a></li> -->
-                                <!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
                                 <li><a target="_blank"
                                         href="https://www.linkedin.com/in/mayan-dekel-938297344?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
                                             class="fab fa-linkedin-in"></i></a></li>
-                                <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
                             </ul>
                         </div>
                     </div>
