--- a/real-estate.html
+++ b/real-estate.html
@@ -151,7 +151,6 @@
     <!-- End lawyer Main Menu Area -->
     <!--==================================================-->
 
-
     <!--==================================================-->
     <!-- Start lawyern breatcam section  -->
     <!--==================================================-->
@@ -164,13 +163,6 @@
                         <div class="breatcam-title">
                             <h1> נדל"ן </h1>
                         </div>
-                        <!-- breatcam menu -->
-                        <!-- <div class="breatcam-menu">
-							<ul>
-								<li><a href="index.html"> Home </a></li>
-								<li> About </li>
-							</ul>
-						</div> -->
                     </div>
                 </div>
             </div>
@@ -179,7 +171,6 @@
     <!--==================================================-->
     <!-- End lawyern breatcam section -->
     <!--==================================================-->
-
 
     <!--==================================================-->
     <!-- Start lawyer about Section -->
@@ -195,7 +186,8 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="lawyer-section-title business-profile">
-                        <h1 class="about-border2">התחדשות עירונית – תמ"א 38 ונדל"ן</h1>
+                        <h1 class="about-border2" style="line-height: 1; margin-top: 0px;">התחדשות עירונית – תמ"א 38
+                            ונדל"ן</h1>
                         <p class="about-pt"> לאור מצוקת הדיור בארץ, יש לעודד את התחדשות העירונית כדי להגדיל את היצע של
                             הדיור. משרדנו מייצג דיירים בפרויקטים באזור גוש
                             דן. יש חשיבות לייעול ושימוש נכון של הקרקע כדי לתת מענה ראוי לדיירים ולשפר את איכות החיים
