--- a/אודות.html
+++ b/אודות.html
@@ -226,7 +226,7 @@
     <section class="about-section style-four" style="direction: rtl; text-align: right;">
         <div class="container">
             <div class="row row-reverse align-items-center">
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg-6 col-md-12 ">
                     <!-- about thumb -->
                     <div class="about-thumb3 ">
                         <img src="assets/images/LawyerMaayanWhite.jpg" alt="">
@@ -234,7 +234,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="lawyer-section-title business-profile">
-                        <h1 class="about-border2">אודות עורכת דין</h1>
+                        <h1 class="about-border2" style="line-height: 1; margin-top: 0px;">אודות עורכת דין</h1>
                         <h1> מעין דקל</h1>
                         <p class="about-pt">
                             <strong>מעין דקל, עורכת דין מנוסה, בעלת ניסיון עשיר של למעלה מ-20 שנה</strong>
