--- a/defamation-law.html
+++ b/defamation-law.html
@@ -134,13 +134,6 @@
                         <div class="breatcam-title">
                             <h1> לשון הרע </h1>
                         </div>
-                        <!-- breatcam menu -->
-                        <!-- <div class="breatcam-menu">
-							<ul>
-								<li><a href="index.html"> Home </a></li>
-								<li> About </li>
-							</ul>
-						</div> -->
                     </div>
                 </div>
             </div>
@@ -165,7 +158,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="lawyer-section-title business-profile">
-                        <h1 class="about-border2">לשון הרע</h1>
+                        <h1 class="about-border2" style="line-height: 1; margin-top: 0px;">לשון הרע</h1>
                         <p class="about-pt">
                             משרדנו פועל בכל הנודע בפרסום לשון הרע במדיה ובכל אמצעי תקשורת ואף בפומבי, מדובר במצבים שבהם
                             יש פרסום של דברים שפוגעים
