deleting images a,d change blog.html to בלוג.html

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 									<li><a href="tort_law.html">נזיקין</a></li>
 								</ul>
 							</li>
-							<li><a href="blog.html">בלוג</a></li>
+							<li><a href="בלוג.html">בלוג</a></li>
 							<li><a href="contact.html">צור קשר</a></li>
 						</ul>
 					</nav>
@@ -163,7 +163,7 @@
 							<li><a href="tort_law.html">נזיקין</a></li>
 						</ul>
 					</li>
-					<li><a href="blog.html">בלוג</a></li>
+					<li><a href="בלוג.html">בלוג</a></li>
 					<li><a href="contact.html">צור קשר</a></li>
 				</ul>
 
@@ -334,7 +334,7 @@
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="blog.html">קרא עוד<i class="bi bi-arrow-left"></i></a>
+								<a href="בלוג.html">קרא עוד<i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
