--- a/real-estate.html
+++ b/real-estate.html
@@ -116,7 +116,7 @@
                                     <li><a href="tort_law.html">נזיקין</a></li>
                                 </ul>
                             </li>
-                            <li><a href="blog.html">בלוג</a></li>
+                            <li><a href="בלוג.html">בלוג</a></li>
                             <li><a href="contact.html">צור קשר</a></li>
                         </ul>
                     </nav>
@@ -140,7 +140,7 @@
                             <li><a href="tort_law.html">נזיקין</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">בלוג</a></li>
+                    <li><a href="בלוג.html">בלוג</a></li>
                     <li><a href="contact.html">צור קשר</a></li>
                 </ul>
 
