--- a/tort_law.html
+++ b/tort_law.html
@@ -84,7 +84,7 @@
                                     <li><a href="tort_law.html">נזיקין</a></li>
                                 </ul>
                             </li>
-                            <li><a href="blog.html">בלוג</a></li>
+                            <li><a href="בלוג.html">בלוג</a></li>
                             <li><a href="contact.html">צור קשר</a></li>
                         </ul>
                     </nav>
@@ -108,7 +108,7 @@
                             <li><a href="tort_law.html">נזיקין</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">בלוג</a></li>
+                    <li><a href="בלוג.html">בלוג</a></li>
                     <li><a href="contact.html">צור קשר</a></li>
                 </ul>
 
