--- a/אודות.html
+++ b/אודות.html
@@ -153,7 +153,7 @@
                                     <li><a href="tort_law.html">נזיקין</a></li>
                                 </ul>
                             </li>
-                            <li><a href="blog.html">בלוג</a></li>
+                            <li><a href="בלוג.html">בלוג</a></li>
                             <li><a href="contact.html">צור קשר</a></li>
                         </ul>
                     </nav>
@@ -179,7 +179,7 @@
                             <li><a href="tort_law.html">נזיקין</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">בלוג</a></li>
+                    <li><a href="בלוג.html">בלוג</a></li>
                     <li><a href="contact.html">צור קשר</a></li>
                 </ul>
 
@@ -194,7 +194,7 @@
     <!--==================================================-->
     <!-- Start lawyern breatcam section  -->
     <!--==================================================-->
-    <div class="breatcam-section d-flex align-items-center">
+    <div class="breatcam-section-about d-flex align-items-center">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -203,13 +203,6 @@
                         <div class="breatcam-title">
                             <h1> אודות </h1>
                         </div>
-                        <!-- breatcam menu -->
-                        <!-- <div class="breatcam-menu">
-							<ul>
-								<li><a href="index.html"> Home </a></li>
-								<li> About </li>
-							</ul>
-						</div> -->
                     </div>
                 </div>
             </div>
@@ -229,7 +222,7 @@
                 <div class="col-lg-6 col-md-12 ">
                     <!-- about thumb -->
                     <div class="about-thumb3 ">
-                        <img src="assets/images/LawyerMaayanWhite.jpg" alt="">
+                        <img src="assets/images/LawyerMayanAbout.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
