--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
 									<li><a href="tort_law.html">נזיקין</a></li>
 								</ul>
 							</li>
-							<li><a href="blog.html">בלוג</a></li>
+							<li><a href="בלוג.html">בלוג</a></li>
 							<li><a href="contact.html">צור קשר</a></li>
 						</ul>
 					</nav>
@@ -117,7 +117,7 @@
 							<li><a href="tort_law.html">נזיקין</a></li>
 						</ul>
 					</li>
-					<li><a href="blog.html">בלוג</a></li>
+					<li><a href="בלוג.html">בלוג</a></li>
 					<li><a href="contact.html">צור קשר</a></li>
 				</ul>
 
