--- a/legal-agreement.html
+++ b/legal-agreement.html
@@ -113,7 +113,7 @@
                                     <li><a href="tort_law.html">נזיקין</a></li>
                                 </ul>
                             </li>
-                            <li><a href="blog.html">בלוג</a></li>
+                            <li><a href="בלוג.html">בלוג</a></li>
                             <li><a href="contact.html">צור קשר</a></li>
                         </ul>
                     </nav>
@@ -137,7 +137,7 @@
                             <li><a href="tort_law.html">נזיקין</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">בלוג</a></li>
+                    <li><a href="בלוג.html">בלוג</a></li>
                     <li><a href="contact.html">צור קשר</a></li>
                 </ul>
 
